--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <ul>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Company</a></li>
-        <li><a href="#">Partners</a></li>
-        <li><a href="#">Testimonials</a></li>
+        <li><a href="#">Technology Partners</a></li>
+        <li><a href="#">story</a></li>
         <li class="resources"><a href="#">Resources</a></li>
       </ul>
     </div>
@@ -75,7 +75,7 @@
       <li><a href="#">Resource</a> |</li>
       <li><a href="#">Contact</a> </li>
     </ul>
-    <p class="copyright">©cool web. All rights reserved.</p>
+    <p class="copyright">Â©cool web. All rights reserved.</p>
     <div id="footerPanhtml"><a href="http://validator.w3.org/check?uri=referer" target="_blank">html</a></div>
     <div id="footerPancss"><a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">css</a></div>
     <ul class="templateworld">
