--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
     <div id="topSidemenuPan">
       <ul>
-        <li class="home"><a href="#">Home</a></li>
-        <li class="contact"><a href="#">Contact</a></li>
+        <li class="home"><a href="#">About</a></li>
+        <li class="contact"><a href="#">Contact US</a></li>
       </ul>
     </div>
   </div>
