--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <ul>
       <li><a href="#">Home</a>| </li>
       <li><a href="#">About Us</a> | </li>
-      <li><a href="#">Company</a>| </li>
-      <li><a href="#">Partners</a> | </li>
-      <li><a href="#">Testimonials</a> |</li>
+      <li><a href="#">C</a>| </li>
+      <li><a href="#">Technology Partners</a> | </li>
+      <li><a href="#">story</a> |</li>
       <li><a href="#">Resource</a> |</li>
       <li><a href="#">Contact</a> </li>
     </ul>
